@@ -8,6 +8,7 @@
     <item id="test3" href="test3.xhtml"        media-type="application/xhtml+xml"/>
     <item id="style" href="main.css"           media-type="text/css"/>
     <item id="kbmk"  href="subdir/second.css"  media-type="text/css"/>
+    <item id="kaok"  href="subdir/third.css"   media-type="text/css"/>
     <item id="eee"   href="cover.gif"          media-type="image/gif"/> 
     <item id="eeiui" href="background1.gif"    media-type="image/gif"/>   
     <item id="eui"   href="background2.gif"    media-type="image/gif"/>      
