@@ -24,16 +24,3 @@ body {
   background: url('../background1.gif');
   background-image: url('../background2.gif');   
 }
-
-/*
-
-This comment is part of a test!
-
-@font-face {
-  font-family: "Something";
-  font-weight: bold;
-  font-style: normal;
-  src: url(../font_not_in_manifest.ttf);
-}
-
-*/
