@@ -1,0 +1,13 @@
+
+/*
+
+This comment is part of a test!
+
+@font-face {
+  font-family: "Something";
+  font-weight: bold;
+  font-style: normal;
+  src: url(../font_not_in_manifest.ttf);
+}
+
+*/
