@@ -1,4 +1,6 @@
 FlightCrew v0.7.2 ADD_DATE
+    - fixed an issue with CSS @import rules in the '@import "something.css"' format not being 
+    recognized
     - fixed an issue with links to fonts in commented-out CSS producing "not in manifest" errors
     (issue #15)
     - fixed an issue with "background" and "background-image" CSS rules that referenced images
